--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 body, html { margin: 0; padding: 0; background: #000; overflow: hidden; }
 </style>
 <meta property="og:title" content="Visualizer" />
-<meta property="og:description" content="HTML5 audio visualizer for microphone or line-in input. Chrome recommended, Firefox works OK. Use 1-5 to select a visualization and + to change variants." />
+<meta property="og:description" content="HTML5 audio visualizer for microphone or line-in input. Chrome recommended, Firefox works OK. Use 1-5 to select a visualization and += to change variants." />
 <meta property="og:image" content="http://ianharmon.com/projects/viz/thumbnail.jpg" />
 </head>
 <body>
