--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@ body, html { margin: 0; padding: 0; background: #000; overflow: hidden; }
 <body>
 <canvas id="canvas"></canvas>
 <img id="particleImage" class="hidden" src="particle400.png">
+<img id="image" class="hidden" src="pyramid.png">
 <script type="text/javascript" src="vizRadialBars.js"></script>
 <script type="text/javascript" src="vizRadialArcs.js"></script>
 <script type="text/javascript" src="vizFlyout.js"></script>
 <script type="text/javascript" src="vizSunburst.js"></script>
 <script type="text/javascript" src="vizBoxes.js"></script>
+<script type="text/javascript" src="vizSpikes.js"></script>
+<script type="text/javascript" src="vizImage.js"></script>
 <script type="text/javascript" src="visualizer.js"></script>
 </body>
 </html>
