--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@ body, html { margin: 0; padding: 0; background: #000; overflow: hidden; }
 .hidden { display: none; }
 </style>
 <meta property="og:title" content="Visualizer" />
-<meta property="og:description" content="HTML5 audio visualizer for microphone or line-in input. Chrome recommended, Firefox works OK. Use 1-5 to select a visualization and += to change variants." />
+<meta property="og:description" content="HTML5 audio visualizer for microphone or line-in input. Chrome recommended, Firefox works OK. Use 1-7 to select a visualization and += to change variants." />
 <meta property="og:image" content="http://ianharmon.com/projects/viz/thumbnail.jpg" />
 </head>
 <body>
 <canvas id="canvas"></canvas>
+<canvas id="buffer" class="hidden"></canvas>
 <img id="particleImage" class="hidden" src="particle400.png">
 <img id="image" class="hidden" src="pyramid.png">
 <script type="text/javascript" src="vizRadialBars.js"></script>
