--- a/example/index.html
+++ b/example/index.html
@@ -15,12 +15,14 @@
 </head>
 <body>
   <canvas id="canvas"></canvas>
-  <img id="image" class="hidden" src="pyramid.png">
   <script>
     var viz
 
     try {
-      var options = { canvas: document.querySelector('canvas') }
+      var options = {
+        canvas: document.querySelector('canvas'),
+        image: 'pyramid.png'
+      }
       viz = visualizer(options)
     } catch(err) {
       console.error(err.message)
