--- a/example/index.html
+++ b/example/index.html
@@ -11,7 +11,7 @@
   <meta property="og:title" content="Visualizer" />
   <meta property="og:description" content="HTML5 audio visualizer for microphone or line-in input. Chrome recommended, Firefox works OK. Click or use 1-7 to select a visualization and press += to change variants." />
   <meta property="og:image" content="../thumbnail.jpg" />
-  <script type="text/javascript" src="visualizer.browser.js"></script>
+  <script type="text/javascript" src="../visualizer.browser.min.js"></script>
 </head>
 <body>
   <div id="container" style="width: 400px; height: 390px;"></div>
@@ -24,7 +24,7 @@
         image: 'pyramid.png'
       }
 
-      viz = visualizer()
+      viz = visualizer(options)
     } catch(err) {
       console.error(err.message)
       alert(err.message)
