--- a/examples/browser-global/index.html
+++ b/examples/browser-global/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <title>Visualizer</title>
+  <title>Visualizer - browser-global Example</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body, html { margin: 0; padding: 0; background: #000; overflow: hidden; }
@@ -10,8 +10,8 @@
   </style>
   <meta property="og:title" content="Visualizer" />
   <meta property="og:description" content="HTML5 audio visualizer for microphone or line-in input. Chrome recommended, Firefox works OK. Click or use 1-7 to select a visualization and press += to change variants." />
-  <meta property="og:image" content="../thumbnail.jpg" />
-  <script type="text/javascript" src="../visualizer.browser.js"></script>
+  <meta property="og:image" content="../../thumbnail.jpg" />
+  <script type="text/javascript" src="../../visualizer.browser.js"></script>
 </head>
 <body>
   <div id="container" style="width: 400px; height: 390px;"></div>
