--- a/examples/browser-global/index.html
+++ b/examples/browser-global/index.html
@@ -11,7 +11,7 @@
   <meta property="og:title" content="Visualizer" />
   <meta property="og:description" content="HTML5 audio visualizer for microphone or line-in input. Chrome recommended, Firefox works OK. Click or use 1-7 to select a visualization and press += to change variants." />
   <meta property="og:image" content="../../thumbnail.jpg" />
-  <script type="text/javascript" src="../../visualizer.browser.min.js"></script>
+  <script type="text/javascript" src="../../visualizer.browser.js"></script>
 </head>
 <body>
   <div id="container" style="width: 400px; height: 390px;"></div>
