--- a/example.html
+++ b/example.html
@@ -5,7 +5,9 @@
   <title>Visualizer - browser-global Example</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body, html { margin: 0; padding: 0; background: #000; overflow: hidden; }
+    body, html {
+      margin: 0; padding: 0; background: #000; overflow: hidden;
+    }
     .hidden { display: none; }
   </style>
   <meta property="og:title" content="Visualizer" />
